# sha2-attack

./: .gitignore  README.md  pyproject.toml
docs/: lsb(M2).csv  lsb.csv  res(M1).csv  res.csv  sha2_attack_stats.xlsx
src/: __init__.py  sha2.py  sha2_attack.py  sha2_attack_stats.py  sha2_end_to_end.py  sha2_trace_generation.py  test_sha2_attack.py
