[project]
name = "sha2-attack"
version = "0.1"
description = "SHA2 CDPA Based Attack Simulator"
requires-python = ">=3.8"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["SHA2", "Differential Power Analysis"]
authors = [
    {name = "FortifyIQ, Inc."}
]
maintainers = [
    {name = "Yaacov Belenky", email = "belenky@fortifyiq.com"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
    "numpy"
]

[project.optional-dependencies]
dev = ["flake8", "pep8-naming", "black", "docformatter"]

[project.urls]
Repository = "https://github.com/fortify-iq/sha2-attack"

[project.scripts]
sha2-attack = "sha2_attack.test_sha2_attack:run"

[tool.setuptools]
package-dir = {sha2_attack = "src"}

[tool.black]
line-length = 99
skip-string-normalization = true

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
